k8s/02.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cnd-dev
  labels:
    istio-injection: enabled
